--- a/main.ipynb
+++ b/main.ipynb
@@ -158,7 +158,9 @@
    "source": [
     "# Import des variables d'environnement\n",
     "\n",
-    "N'oubliez pas de copier-coller le fichier .env à la racine du code"
+    "Cette section charge les variables d'environnement depuis le fichier .env. Ces variables contiennent les clés d'API et les identifiants nécessaires pour se connecter aux services Azure OpenAI, Google Cloud, etc.\n",
+    "\n",
+    "**Important :** N'oubliez pas de copier-coller le fichier .env à la racine du code avec toutes les variables nécessaires."
    ]
   },
   {
@@ -185,6 +187,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "637ea435",
+   "metadata": {},
+   "source": [
+    "# Configuration des identifiants Google Cloud\n",
+    "\n",
+    "Cette cellule configure le chemin vers le fichier de compte de service Google Cloud. Ce fichier est requis pour s'authentifier auprès des services Google Cloud comme BigQuery et Cloud Storage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "4287e93d",
@@ -199,7 +211,9 @@
    "id": "01c0606f",
    "metadata": {},
    "source": [
-    "# Import des librairies nécessaires"
+    "# Import des librairies nécessaires\n",
+    "\n",
+    "Cette cellule importe toutes les bibliothèques Python nécessaires pour le projet, incluant Semantic Kernel pour la création d'agents IA, les connecteurs Azure OpenAI, les outils pour BigQuery, ainsi que les bibliothèques utilitaires pour le traitement de données et les requêtes HTTP."
    ]
   },
   {
@@ -246,7 +260,9 @@
    "id": "6436189f",
    "metadata": {},
    "source": [
-    "## Tool Météo"
+    "## Tool Météo\n",
+    "\n",
+    "Cette section définit le plugin météo qui permet à l'agent d'obtenir les conditions météorologiques actuelles et les prévisions pour des coordonnées géographiques spécifiques. Le plugin utilise l'API Open-Meteo pour récupérer les données de température, humidité, vent et précipitations."
    ]
   },
   {
@@ -453,7 +469,9 @@
    "id": "5db05a9a",
    "metadata": {},
    "source": [
-    "## Tool Bigquery"
+    "## Tool Bigquery\n",
+    "\n",
+    "Cette section définit le plugin BigQuery qui permet à l'agent d'interroger la base de données BigQuery pour récupérer des informations sur les chantiers. Le plugin peut exécuter des requêtes SQL SELECT de manière sécurisée et retourner les résultats au format JSON."
    ]
   },
   {
@@ -595,7 +613,9 @@
    "id": "738ce52c",
    "metadata": {},
    "source": [
-    "## Tool Date du Jour"
+    "## Tool Date du Jour\n",
+    "\n",
+    "Cette section définit le plugin de gestion des dates qui permet à l'agent d'obtenir la date et l'heure actuelles dans le fuseau horaire de Paris. Cet outil est essentiel pour calculer les dates relatives (demain, après-demain, etc.) dans les requêtes utilisateur."
    ]
   },
   {
@@ -634,7 +654,9 @@
    "id": "75dea728",
    "metadata": {},
    "source": [
-    "## Chargement Règles Métier"
+    "## Chargement Règles Métier\n",
+    "\n",
+    "Cette section charge les règles métier depuis un document Word stocké dans Google Cloud Storage. Ces règles définissent les critères de faisabilité des travaux de chantier en fonction des conditions météorologiques (température, vent, précipitations). Les règles sont ensuite intégrées dans le prompt de l'agent pour guider ses décisions."
    ]
   },
   {
@@ -708,7 +730,9 @@
    "id": "3f922be9",
    "metadata": {},
    "source": [
-    "## Prompt de l'Agent"
+    "## Prompt de l'Agent\n",
+    "\n",
+    "Cette section définit le prompt système de l'agent de faisabilité des chantiers. Le prompt décrit le rôle de l'agent, les actions qu'il doit effectuer (identification du chantier, requête BigQuery, récupération météo, évaluation de faisabilité), et les règles métier à appliquer. L'agent doit répondre en français avec des recommandations claires."
    ]
   },
   {
@@ -809,7 +833,9 @@
    "id": "38a127b8",
    "metadata": {},
    "source": [
-    "## Execution de l'agent"
+    "## Execution de l'agent\n",
+    "\n",
+    "Cette section contient la fonction principale qui initialise le kernel Semantic Kernel, configure les services Azure OpenAI, enregistre tous les plugins (BigQuery, Météo, Datetime), et démarre une boucle de conversation interactive. L'utilisateur peut poser des questions sur la faisabilité des chantiers et l'agent répondra en utilisant les outils disponibles."
    ]
   },
   {
@@ -903,10 +929,9 @@
    "source": [
     "# Création d'un Agent de A à Z\n",
     "\n",
-    "Nous allons créer un agent qui calcule combien en matériaux coutera de faire une surface spécifique\n",
-    "Le but de l'agent est de calculer le prix pour remplir une surface donnée avec un matériaux précis en tete.\n",
+    "Cette section présente un nouveau projet : créer un agent qui calcule le coût en matériaux pour réaliser une surface spécifique. Le but de l'agent est de calculer le prix pour remplir une surface donnée avec un matériau précis.\n",
     "\n",
-    "Exemple: Combien ca va me couter de couler du béton sur 2 mètre de haut et 40 mètre de large ?"
+    "**Exemple d'utilisation :** \"Combien ça va me coûter de couler du béton sur 2 mètres de haut et 40 mètres de large ?\""
    ]
   },
   {
@@ -916,7 +941,7 @@
    "source": [
     "## Outils Mathématiques\n",
     "\n",
-    "Il vous permettra de faire les calculs"
+    "Cette section doit contenir un plugin d'outils mathématiques qui permettra à l'agent d'effectuer les calculs nécessaires pour déterminer les volumes, surfaces et coûts des matériaux. L'agent pourra ainsi calculer automatiquement les quantités de matériaux nécessaires en fonction des dimensions fournies."
    ]
   },
   {
@@ -936,7 +961,7 @@
    "source": [
     "## Outils Recherche Web\n",
     "\n",
-    "Il vous permettra d'aller chercher le prix des produits sur le web"
+    "Cette section définit le plugin de recherche web utilisant DuckDuckGo. Cet outil permet à l'agent de rechercher sur internet les prix actuels des matériaux de construction. Le plugin peut effectuer des recherches rapides ou récupérer le contenu complet des pages web pour extraire les informations de prix."
    ]
   },
   {
@@ -1150,7 +1175,9 @@
    "id": "c050211c",
    "metadata": {},
    "source": [
-    "## Création du prompt de l'agent"
+    "## Création du prompt de l'agent\n",
+    "\n",
+    "Cette section doit contenir le prompt système pour l'agent de calcul de coûts. Le prompt doit définir le rôle de l'agent, expliquer comment il doit utiliser les outils mathématiques pour calculer les volumes/surfaces, rechercher les prix des matériaux sur le web, et fournir une estimation de coût finale à l'utilisateur."
    ]
   },
   {
@@ -1171,7 +1198,9 @@
    "id": "f821ee96",
    "metadata": {},
    "source": [
-    "## Définition de la boucle pour intéragir avec les agents"
+    "## Définition de la boucle pour intéragir avec les agents\n",
+    "\n",
+    "Cette section doit contenir le code de la boucle d'interaction avec l'agent de calcul de coûts. Similaire à la boucle de l'agent de faisabilité, elle initialise le kernel, enregistre les plugins (mathématiques et recherche web), et permet une conversation interactive où l'utilisateur peut demander des estimations de coûts pour différents projets."
    ]
   },
   {
@@ -1181,7 +1210,10 @@
    "source": [
     "# Bonus, inclure un MCP à l'agent\n",
     "\n",
-    "Amusez vous :)"
+    "\n",
+    "Cette section est un exercice bonus pour intégrer un MCP (Model Context Protocol) à l'agent. Le MCP permet d'étendre les capacités de l'agent en lui donnant accès à des outils et contextes supplémentaires via un protocole standardisé.\n",
+    "\n",
+    "**Amusez-vous bien !** 🚀"
    ]
   },
   {
