added google PSE

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "92f8bc41",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3.12/pty.py:95: DeprecationWarning: This process (pid=8050) is multi-threaded, use of forkpty() may lead to deadlocks in the child.\n",
-      "  pid, fd = os.forkpty()\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "1e6736dc",
    "metadata": {},
    "outputs": [
@@ -173,7 +165,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "4287e93d",
    "metadata": {},
    "outputs": [],
@@ -204,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "bedc7831",
    "metadata": {},
    "outputs": [],
@@ -251,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "4381e9d1",
    "metadata": {},
    "outputs": [],
@@ -458,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "41376cdf",
    "metadata": {},
    "outputs": [],
@@ -600,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "fb225816",
    "metadata": {},
    "outputs": [],
@@ -639,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "e40a54be",
    "metadata": {},
    "outputs": [
@@ -713,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "55632739",
    "metadata": {},
    "outputs": [],
@@ -814,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "3067fc9f",
    "metadata": {},
    "outputs": [],
@@ -921,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "3b0e5dfe",
    "metadata": {},
    "outputs": [],
@@ -934,9 +926,120 @@
    "id": "8c6563ab",
    "metadata": {},
    "source": [
-    "## Outils Recherche Web\n",
+    "## Outils Recherche Web ( Google )\n",
     "\n",
     "Il vous permettra d'aller chercher le prix des produits sur le web"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd05dae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assistant > Here are the latest news updates on Nicolas Sarkozy:\n",
+      "\n",
+      "1. **Sarkozy enters jail over campaign financing**  \n",
+      "   Nicolas Sarkozy has become the first former French president to go to jail, starting a five-year sentence for conspiring to illegally fund his 2007 election campaign. He began serving his term at La Santé prison but has appealed the decision.  \n",
+      "   [Read more on BBC News](https://www.bbc.com/news/articles/cvgkm2j0xelo) – Published Oct 21, 2025.\n",
+      "\n",
+      "2. **Sarkozy sentenced to five years in Libya campaign financing case**  \n",
+      "   On September 25, 2025, Sarkozy was found guilty of criminal conspiracy in connection with alleged Libyan funding of his 2007 presidential campaign. He was cleared of other charges.  \n",
+      "   [Read more on BBC News](https://www.bbc.com/news/articles/cp98kepmj9lo) – Published Sep 25, 2025.\n",
+      "\n",
+      "3. **Permanent police protection in prison**  \n",
+      "   Following security concerns, Sarkozy will have permanent police protection during his prison stay, with two officers stationed in nearby cells at all times.  \n",
+      "   [Read more on The Guardian](https://www.theguardian.com/world/2025/oct/22/nicolas-sarkozy-permanent-police-protection-in-prison-france) – Published Oct 22, 2025.\n",
+      "\n",
+      "4. **Temporary release pending appeal**  \n",
+      "   AP News reported that Sarkozy has been released from prison pending his appeal in the conspiracy case.  \n",
+      "   [Read more on AP News](https://apnews.com/hub/nicolas-sarkozy).\n",
+      "\n",
+      "Do you want me to compile a **timeline of Sarkozy’s legal troubles leading to his imprisonment**?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import time\n",
+    "\n",
+    "class GoogleSearchPlugin:\n",
+    "    def __init__(self, api_key: str, cx: str):\n",
+    "        self.api_key = api_key\n",
+    "        self.cx = cx\n",
+    "\n",
+    "    @kernel_function(\n",
+    "        name=\"search\",\n",
+    "        description=\"Search the web using Google Custom Search\"\n",
+    "    )\n",
+    "    def search(self, query: str, max_results: int = 10) -> str:\n",
+    "        url = (\n",
+    "            \"https://www.googleapis.com/customsearch/v1\"\n",
+    "            f\"?key={self.api_key}&cx={self.cx}\"\n",
+    "            f\"&q={query}&num={max_results}\"\n",
+    "        )\n",
+    "        resp = requests.get(url)\n",
+    "        resp.raise_for_status()\n",
+    "        data = resp.json()\n",
+    "\n",
+    "        items = data.get(\"items\", [])\n",
+    "        if not items:\n",
+    "            return \"No results found.\"\n",
+    "\n",
+    "        lines = []\n",
+    "        for item in items:\n",
+    "            title = item.get('title')\n",
+    "            snippet = item.get('snippet')\n",
+    "            link = item.get('link')\n",
+    "            \n",
+    "            # Retry logic for 403 errors\n",
+    "            max_retries = 5\n",
+    "            retry_count = 0\n",
+    "            link_content = \"Error fetching the content\"\n",
+    "            \n",
+    "            while retry_count < max_retries:\n",
+    "                try:\n",
+    "                    headers = {\n",
+    "                        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
+    "                    }\n",
+    "                    link_resp = requests.get(link, headers=headers, timeout=10)\n",
+    "                    \n",
+    "                    if link_resp.status_code == 403:\n",
+    "                        retry_count += 1\n",
+    "                        time.sleep(1)  # Wait before retrying\n",
+    "                        continue\n",
+    "                    \n",
+    "                    link_resp.raise_for_status()\n",
+    "                    link_content = link_resp.text[:5000]\n",
+    "                    break  # Success, exit retry loop\n",
+    "                    \n",
+    "                except requests.RequestException as e:\n",
+    "                    if retry_count < max_retries - 1:\n",
+    "                        retry_count += 1\n",
+    "                        time.sleep(1)\n",
+    "                    else:\n",
+    "                        link_content = f\"Error fetching the content: {str(e)}\"\n",
+    "                        break\n",
+    "            \n",
+    "            lines.append(\n",
+    "                f\"- {title}\\n  {snippet}\\n  {link}\\n  Content Preview: {link_content}\\n\"\n",
+    "            )\n",
+    "\n",
+    "        return \"\\n\".join(lines)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d954470",
+   "metadata": {},
+   "source": [
+    "## Outils Recherche Web ( DuckDuckGo )"
    ]
   },
   {
