--- a/main.ipynb
+++ b/main.ipynb
@@ -1307,6 +1307,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f1b5aff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inclure votre code ICI"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "01295377",
    "metadata": {},
