added cloud storage installation + add overide on loading env variable

--- a/main.ipynb
+++ b/main.ipynb
@@ -27,6 +27,7 @@
       "Requirement already satisfied: google-cloud-bigquery-storage in /home/mraveau1/.local/lib/python3.12/site-packages (2.34.0)\n",
       "Requirement already satisfied: python-docx in /home/mraveau1/.local/lib/python3.12/site-packages (1.2.0)\n",
       "Requirement already satisfied: ddgs in /home/mraveau1/.local/lib/python3.12/site-packages (9.9.1)\n",
+      "Requirement already satisfied: google-cloud-storage in /usr/local/lib/python3.12/dist-packages (2.19.0)\n",
       "Requirement already satisfied: azure-ai-projects>=1.0.0b12 in /home/mraveau1/.local/lib/python3.12/site-packages (from semantic-kernel) (2.0.0b2)\n",
       "Requirement already satisfied: azure-ai-agents>=1.2.0b3 in /home/mraveau1/.local/lib/python3.12/site-packages (from semantic-kernel) (1.2.0b6)\n",
       "Requirement already satisfied: aiohttp~=3.8 in /home/mraveau1/.local/lib/python3.12/site-packages (from semantic-kernel) (3.13.2)\n",
@@ -64,6 +65,7 @@
       "Requirement already satisfied: primp>=0.15.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from ddgs) (0.15.0)\n",
       "Requirement already satisfied: httpx>=0.28.1 in /usr/local/lib/python3.12/dist-packages (from httpx[brotli,http2,socks]>=0.28.1->ddgs) (0.28.1)\n",
       "Requirement already satisfied: fake-useragent>=2.2.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from ddgs) (2.2.0)\n",
+      "Requirement already satisfied: google-crc32c<2.0dev,>=1.0 in /usr/local/lib/python3.12/dist-packages (from google-cloud-storage) (1.7.1)\n",
       "Requirement already satisfied: aiohappyeyeballs>=2.5.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from aiohttp~=3.8->semantic-kernel) (2.6.1)\n",
       "Requirement already satisfied: aiosignal>=1.4.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from aiohttp~=3.8->semantic-kernel) (1.4.0)\n",
       "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp~=3.8->semantic-kernel) (25.3.0)\n",
@@ -74,7 +76,6 @@
       "Requirement already satisfied: aioice<1.0.0,>=0.10.1 in /home/mraveau1/.local/lib/python3.12/site-packages (from aiortc>=1.9.0->semantic-kernel) (0.10.1)\n",
       "Requirement already satisfied: av<17.0.0,>=14.0.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from aiortc>=1.9.0->semantic-kernel) (16.0.1)\n",
       "Requirement already satisfied: cryptography>=44.0.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from aiortc>=1.9.0->semantic-kernel) (46.0.3)\n",
-      "Requirement already satisfied: google-crc32c>=1.1 in /usr/local/lib/python3.12/dist-packages (from aiortc>=1.9.0->semantic-kernel) (1.7.1)\n",
       "Requirement already satisfied: pyee>=13.0.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from aiortc>=1.9.0->semantic-kernel) (13.0.0)\n",
       "Requirement already satisfied: pylibsrtp>=0.10.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from aiortc>=1.9.0->semantic-kernel) (1.0.0)\n",
       "Requirement already satisfied: pyopenssl>=25.0.0 in /home/mraveau1/.local/lib/python3.12/site-packages (from aiortc>=1.9.0->semantic-kernel) (25.3.0)\n",
@@ -140,7 +141,7 @@
     }
    ],
    "source": [
-    "!pip install semantic-kernel beautifulsoup4 python-dotenv google-cloud-bigquery pyyaml google-cloud-bigquery-storage python-docx ddgs"
+    "!pip install semantic-kernel beautifulsoup4 python-dotenv google-cloud-bigquery pyyaml google-cloud-bigquery-storage python-docx ddgs google-cloud-storage"
    ]
   },
   {
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1e6736dc",
    "metadata": {},
    "outputs": [
@@ -175,7 +176,7 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "load_dotenv()"
+    "load_dotenv(override=True)"
    ]
   },
   {
@@ -833,9 +834,48 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "5129c252",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gpt-5-mini'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getenv(\"DEPLOYMENT_NAME\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "3067fc9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assistant > Vous voulez faire un test — merci ! Pour que je puisse évaluer la faisabilité, il me faut deux informations :\n",
+      "\n",
+      "1) Quel chantier ? Indiquez soit le TYPE_chantier (ex. \"Toiture\", \"Fondations\", \"Peinture Extérieure\", etc.) soit le NOM_chef_chantier ou l’ID_chef_chantier.  \n",
+      "2) Quelle date ? Donnez une date précise (ex. \"10 novembre 2025\") ou une date relative (ex. \"demain\", \"après‑demain\", \"dans 2 jours\"). La date doit être dans les 7 jours à partir d’aujourd’hui (07/11/2025).\n",
+      "\n",
+      "Exemples :\n",
+      "- \"Toiture le 09/11/2025\"\n",
+      "- \"Chantier géré par Dupont le lendemain\"\n",
+      "- \"Fondations dans 3 jours\"\n",
+      "\n",
+      "Donnez ces éléments et je lance la recherche dans la base et l’analyse météo.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "async def main():\n",
@@ -961,33 +1001,7 @@
    "execution_count": null,
    "id": "cd05dae5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant > Here are the latest news updates on Nicolas Sarkozy:\n",
-      "\n",
-      "1. **Sarkozy enters jail over campaign financing**  \n",
-      "   Nicolas Sarkozy has become the first former French president to go to jail, starting a five-year sentence for conspiring to illegally fund his 2007 election campaign. He began serving his term at La Santé prison but has appealed the decision.  \n",
-      "   [Read more on BBC News](https://www.bbc.com/news/articles/cvgkm2j0xelo) – Published Oct 21, 2025.\n",
-      "\n",
-      "2. **Sarkozy sentenced to five years in Libya campaign financing case**  \n",
-      "   On September 25, 2025, Sarkozy was found guilty of criminal conspiracy in connection with alleged Libyan funding of his 2007 presidential campaign. He was cleared of other charges.  \n",
-      "   [Read more on BBC News](https://www.bbc.com/news/articles/cp98kepmj9lo) – Published Sep 25, 2025.\n",
-      "\n",
-      "3. **Permanent police protection in prison**  \n",
-      "   Following security concerns, Sarkozy will have permanent police protection during his prison stay, with two officers stationed in nearby cells at all times.  \n",
-      "   [Read more on The Guardian](https://www.theguardian.com/world/2025/oct/22/nicolas-sarkozy-permanent-police-protection-in-prison-france) – Published Oct 22, 2025.\n",
-      "\n",
-      "4. **Temporary release pending appeal**  \n",
-      "   AP News reported that Sarkozy has been released from prison pending his appeal in the conspiracy case.  \n",
-      "   [Read more on AP News](https://apnews.com/hub/nicolas-sarkozy).\n",
-      "\n",
-      "Do you want me to compile a **timeline of Sarkozy’s legal troubles leading to his imprisonment**?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import time\n",
@@ -1054,9 +1068,7 @@
     "                f\"- {title}\\n  {snippet}\\n  {link}\\n  Content Preview: {link_content}\\n\"\n",
     "            )\n",
     "\n",
-    "        return \"\\n\".join(lines)\n",
-    "\n",
-    "\n"
+    "        return \"\\n\".join(lines)"
    ]
   },
   {
